Minor changes to accomodate Eclipse vanilla base encoder.